name:			perpubplat
version:		0.10.5
copyright:		Copyright 2008 Multifarious, Inc.
description:		Personal publishing (i.e., blog) platform.
license:        	BSD3
license-file:   	LICENSE
author:			Paul Brown <prb@mult.ifario.us>
homepage:		http://datapr0n.com/perpubplat
maintainer:		Paul Brown <prb@mult.ifario.us>
stability: 		alpha
build-type:		Simple
cabal-version:		>= 1.2

Executable perpubplat
 build-depends:
  base >= 4.9 && < 5, parsec >= 3.1, filepath >= 1.0,
  containers, directory, utf8-string >= 0.2,
  network >= 2.1, time >= 1.9,
  unix >= 2.3, bytestring >= 0.9.0.1.1, pureMD5 >= 0.2.2,
  base64-string, hslogger >= 1.0.5, xml >= 1.3.4,
  HDBC >= 2.1.0, HDBC-sqlite3 >= 2.1.0.0,
  http-client >= 0.5, http-client-tls >= 0.3, http-types >= 0.12,
  aeson >= 1.0, text >= 1.2,
  lucid >= 2.9,
  wai >= 3.2, warp >= 3.3, case-insensitive >= 1.2
 main-is:
  perpubplat.hs
 hs-source-dirs:
  src, servletsrc
 ghc-options:
  -O -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -threaded

Executable runtests
 buildable:
  False
 build-depends:
  HUnit
 main-is:
  runtests.hs
 hs-source-dirs:
  testsrc
 ghc-options:
  -O -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -threaded
